--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "mbetixz",
-            "email": "mbetixz93@gnail.com",
+            "email": "mbetixz93@gmail.com",
             "homepage": "http://github.com/mbetixz",
             "role": "I don't know what is"
         }
